added new things

--- a/students/selim/index.html
+++ b/students/selim/index.html
@@ -5,6 +5,7 @@
   <title>Hello, world!</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -14,6 +15,7 @@
     <img src="" alt="">
     <p>Recently graduated in <strong>Chemical Engineering</strong>.</p>
   </section>
+  
   <section>
     <h3>Personal Interests</h3>
     <ul>
@@ -25,6 +27,7 @@
       <li>Check my cv : <a href="">xxxxxxxx</a></li>
     </ul>
   </section>
+
   <section>
     <h2>Experiments</h2>
     <article class="card experiment">
